new post type, refactored code for Polylang support

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-GitHub Plugin URI:  Mill3/cstj-algolia-sync-plugin
-GitHub Plugin URI:  https://github.com/Mill3/cstj-algolia-sync-plugin
-Plugin Name: CSTJ - Algolia Sync
+GitHub Plugin URI:  Mill3/poleacn-algolia-sync-plugin
+GitHub Plugin URI:  https://github.com/Mill3/poleacn-algolia-sync-plugin
+Plugin Name: Poleacn - Algolia Sync
 Description: Sync data from Wordpress to Algolia
 Version:            0.0.7
 Author:             MILL3 Studio
